// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Shared via</th>
        <td>
          <router-link-stub to="[object Object]">
            <span>/Shares</span>
          </router-link-stub>
        </td>
      </tr>
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 2`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Shared by</th>
        <td>
          <span>Marie Curie</span>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 21, 2015, 7:28 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span>(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub appearance="raw" arialabel="Copy EOS path" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub appearance="raw" arialabel="Copy direct link" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel size="medium"></oc-spinner-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Versions</th>
        <td>
          <oc-button-stub appearance="raw" arialabel="See all versions" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">1</oc-button-stub>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub appearance="raw" arialabel="Copy EOS path" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub appearance="raw" arialabel="Copy direct link" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <span>Oct 21, 2015, 7:28 AM</span>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span>(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <span>Oct 21, 2015, 7:28 AM</span>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <span>Oct 21, 2015, 7:28 AM</span>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub appearance="raw" arialabel="Copy EOS path" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub appearance="raw" arialabel="Copy direct link" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <span>Oct 21, 2015, 7:28 AM</span>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub class="details-icon" resource="[object Object]" size="xxxlarge"></oc-resource-icon-stub>
    </div>
    <div class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub indicators="[object Object]" resource="[object Object]" target></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr>
        <th class="oc-pr-s" scope="col">Last modified</th>
        <td>
          <span>Oct 21, 2015, 7:28 AM</span>
        </td>
      </tr>
      <!---->
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th class="oc-pr-s" scope="col">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub appearance="raw" arialabel="Copy EOS path" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th class="oc-pr-s" scope="col">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub appearance="raw" arialabel="Copy direct link" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">
              <oc-icon-stub accessiblelabel color filltype="fill" name="clipboard" size="medium" type="span" variation="passive"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;
